[gd_scene load_steps=2 format=3 uid="uid://c5vm6qd6mdyk8"]

[ext_resource type="Script" path="res://character_selection.gd" id="1_xhtib"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhtib")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELE√á√ÉO DE PERSONAGEM"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CharacterSelection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectLabel" type="Label" parent="VBoxContainer/CharacterSelection"]
layout_mode = 2
text = "Escolha sua classe:"
horizontal_alignment = 1

[node name="CharacterButtons" type="HBoxContainer" parent="VBoxContainer/CharacterSelection"]
layout_mode = 2

[node name="WarriorButton" type="Button" parent="VBoxContainer/CharacterSelection"]
layout_mode = 2
text = "‚öîÔ∏è Guerreiro
FOR: 8, DEF: 7
INT: 3, VIT: 7"

[node name="MageButton" type="Button" parent="VBoxContainer/CharacterSelection"]
layout_mode = 2
text = "üîÆ Mago
FOR: 3, DEF: 4
INT: 8, VIT: 5"

[node name="ArcherButton" type="Button" parent="VBoxContainer/CharacterSelection"]
layout_mode = 2
text = "üèπ Arqueiro
FOR: 6, DEF: 5
INT: 6, VIT: 6"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nome do Personagem:"

[node name="CharacterNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite o nome do seu personagem"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckNameButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Verificar Nome"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Criar Personagem"
disabled = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Selecione um personagem e digite um nome"
horizontal_alignment = 1
autowrap_mode = 2